fixed spacing and floats

--- a/css/style.scss
+++ b/css/style.scss
@@ -41,6 +41,7 @@ body{
 
 .toolbar {
 	align-items: center !important;
+	justify-content: flex-end !important;
 }
 
 .icon-twitter:before, 
@@ -50,7 +51,8 @@ body{
 
 #logo {
 	margin-left: 5px;
-	margin-right: 30%;
+	margin-bottom: 7px;
+	margin-right: auto;
 	max-height: 40px;
 }
 
